Fix up badge spacing

--- a/test-case-reporting/static/css/custom.css
+++ b/test-case-reporting/static/css/custom.css
@@ -20,7 +20,6 @@
   font-family: sans-serif;
   font-variant: small-caps;
   color: white;
-  margin-right: 10px;
   text-align: center;
   font-weight: bold;
 }
@@ -31,4 +30,7 @@
 
 .test-run-name {
   line-height: 1.25em;
+}
+.test-run-name td {
+  padding: 0.5em;
 }
